<resources>
    <string name="app_name">Ecommerce App</string>

    <string name="skip">Skip</string>
    <string name="phone_no">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User?</string>
    <string name="signup_here">Signup Here</string>
    <string name="or">or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_category">Category</string>
    <string name="nav_person">Person</string>
</resources>
