<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_skip"
            android:text="@string/skip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/padding_small_5"
            android:textColor="@color/txt_color" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:id="@+id/logo"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_sample"
            android:layout_below="@+id/btn_skip"
            android:layout_marginTop="@dimen/padding_too_large_30"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:layout_below="@+id/logo"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingRight="@dimen/padding_small_5"
            android:hint="@string/phone_no"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@+id/phone_number"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"
            android:paddingLeft="@dimen/padding_small_5"
            android:paddingRight="@dimen/padding_small_5"
            android:hint="@string/password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login"
            android:text="@string/login"
            android:gravity="center_horizontal"
            android:background="@drawable/rounded_green_login"
            android:textColor="@color/white"
            android:layout_below="@+id/password"
            android:layout_marginRight="@dimen/padding_too_large_30"
            android:layout_marginLeft="@dimen/padding_too_large_30"
            android:layout_marginTop="@dimen/padding_extra_large_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/or"
            android:text="@string/or"
            android:layout_below="@id/login"
            android:layout_marginTop="@dimen/padding_too_large_30"
            android:layout_marginBottom="@dimen/padding_extra_large_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/or"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_too_large_30">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newUser"
                android:textColor="@color/txt_color"
                android:text="@string/new_user"
                android:layout_marginRight="@dimen/padding_small_5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signup"
                android:text="@string/signup_here"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>